# svadilfari

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  svathilfari.cabal
Database/Redis/: Worker.hs
Database/Redis/Worker/: Config.hs  Job.hs
